# trading-agent

./: Cargo.toml  LICENSE  README.md
src/: agent.rs  config.rs  kraken_futures.rs  kraken_types.rs  llm.rs  logging.rs  main.rs  market_regimes.rs  polymarket.rs  ta.rs  tool.rs  trade.rs  utils.rs  workflow.rs
