[package]
name = "trading-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
dotenvy = "0.15.7"
hmac = "0.13.0"
rand = "0.10.1"
reqwest = { version = "0.13.2", features = ["json", "query"] }
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
sha2 = "0.11.0"
talib-rs = "0.1.2"
tokio = { version = "1.51.0", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json", "time"] }
